--- a/archives.html
+++ b/archives.html
@@ -19,9 +19,13 @@
 <h1>Archives for Lab-5 Site</h1>
 
 <dl>
-    <dt>Sat 13 August 2022</dt>
+    <dt>Thu 13 October 2022</dt>
+    <dd><a href="https://aaronskiba.github.io/my-fourth-article.html">My Fourth Article</a></dd>
+    <dt>Thu 13 October 2022</dt>
+    <dd><a href="https://aaronskiba.github.io/my-third-article.html">My Third Article</a></dd>
+    <dt>Thu 13 October 2022</dt>
     <dd><a href="https://aaronskiba.github.io/my-second-article.html">My Second Article</a></dd>
-    <dt>Wed 10 August 2022</dt>
+    <dt>Mon 10 October 2022</dt>
     <dd><a href="https://aaronskiba.github.io/my-first-article.html">My First Article</a></dd>
 </dl>
         <footer id="contentinfo" class="body">
